11065 Fixed What's New panel visibility (#54)
* - fixed What's New panel visibility
- app version = 1.0.14

* - corrected package-lock file

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -428,3 +428,8 @@ a.link {
     font-size: $px-14 !important;
   }
 }
+
+// override class that hides What's New panel on screens < 1264 px wide
+.v-navigation-drawer--close {
+  visibility: inherit;
+}
